@@ -1,0 +1,5 @@
+#pragma once
+#include "Game/items.h"
+#include "Game/collision/collide_room.h"
+
+void DragSasCollision(short itemNumber, ItemInfo* laraItem, CollisionInfo* coll);
