@@ -6,6 +6,7 @@ Version 1.0.3
 * Add FlyCheat option to gameflow script for disabling dozy mode.
 * Add SetNumberOfSecrets option to gameflow script to set overall amount of secrets.
 * Add OCB 1 for rollingball to make it silent.
+* Backport Sas Drag Bloke from TR4 into TEN. 
 * Adjust sprint jump timing.
 * Customize waterfall mist colour and OCB (XXYY, where XX is width, and YY is size).
 * Implement sprite instancing to speed up rendering.
